Fixing #1 - aligning junit versions to all SNAPSHOTs

--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <!-- see https://github.com/junit-team/junit5/issues/809 -->
     <junit.platform.version>1.2.0-SNAPSHOT</junit.platform.version>
-    <junit.vintage.version>5.1.1</junit.vintage.version>
-    <junit.jupiter.version>5.1.1</junit.jupiter.version>
+    <junit.vintage.version>5.2.0-SNAPSHOT</junit.vintage.version>
+    <junit.jupiter.version>5.2.0-SNAPSHOT</junit.jupiter.version>
   </properties>
 
   <dependencies>
