Breaking out various modes of operation on the same surefire-plugin
+ Junit5 with provider
+ Junit4 default

+ <forkCount>1</forkCount>
+ <forkMode>always</forkMode>

--- a/pom.xml
+++ b/pom.xml
@@ -5,78 +5,27 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.eclipse.jetty.demo</groupId>
-  <artifactId>junit-issue-801</artifactId>
+  <artifactId>junit5-issue-801</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-  <name>junit-issue-801</name>
+  <packaging>pom</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <surefire.version>2.21.0</surefire.version>
     <!-- see https://github.com/junit-team/junit5/issues/809 -->
     <junit.platform.version>1.2.0-SNAPSHOT</junit.platform.version>
     <junit.vintage.version>5.2.0-SNAPSHOT</junit.vintage.version>
     <junit.jupiter.version>5.2.0-SNAPSHOT</junit.jupiter.version>
   </properties>
 
-  <dependencies>
-    <!-- junit platform -->
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-runner</artifactId>
-      <version>${junit.platform.version}</version>
-    </dependency>
-    <!-- junit jupiter -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit.jupiter.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-params</artifactId>
-      <version>${junit.jupiter.version}</version>
-    </dependency>
-    <!-- junit vintage -->
-    <dependency>
-      <groupId>org.junit.vintage</groupId>
-      <artifactId>junit-vintage-engine</artifactId>
-      <version>${junit.vintage.version}</version>
-    </dependency>
-  </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.21.0</version>
-        <configuration>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>${junit.platform.version}</version>
-          </dependency>
-          <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
-          </dependency>
-          <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit.vintage.version}</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-    </plugins>
-  </build>
+  <modules>
+    <module>junit4-forkcount-1</module>
+    <module>junit4-forkmode-always</module>
+    <module>junit5-forkcount-1</module>
+    <module>junit5-forkmode-always</module>
+  </modules>
 
   <repositories>
     <repository>
